--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<SlidingMenu xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<com.jeremyfeinstein.slidingmenu.lib.SlidingMenu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:sliding="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:fitsSystemWindows="true"
+    tools:context="com.example.weina.bishe.controller.MainActivity"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    sliding:fadeEnabled="true"
+    sliding:fadeDegree="0.3"
+    sliding:viewAbove="@layout/main_content_bar">
 
-</SlidingMenu>
+    <!--<include layout="@layout/main_content_bar"></include>-->
+</com.jeremyfeinstein.slidingmenu.lib.SlidingMenu>
