--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -12,9 +12,37 @@
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"/>
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/item_title"
+        android:textSize="15sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="haha"
+        android:maxLines="2"
+        android:ellipsize="end"
+        android:textStyle="bold"
         android:gravity="center"/>
+    <!--价钱以及多少人付款-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
+        <!--价钱符号-->
+        <TextView
+            android:id="@+id/item_price"
+            android:text="￥ 300"
+            android:textSize="18sp"
+            android:textColor="#ff690a"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/item_sales"
+            android:text="11 人付款"
+            android:textSize="14sp"
+            android:textColor="#7b7775"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 </LinearLayout>
