--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -6,7 +6,7 @@
 
     <ImageView
         android:src="@drawable/login_wait"
-        android:id="@+id/masonry_item_img"
+        android:id="@+id/item_img"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
