--- a/app/src/main/res/layout/activity_scrolling.xml
+++ b/app/src/main/res/layout/activity_scrolling.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Li xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
 
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.weina.bishe.ScrollingActivity">
+    tools:context=".controller.ScrollingActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
@@ -91,4 +91,4 @@
         <!--app:layout_anchor="@id/app_bar"-->
         <!--app:layout_anchorGravity="bottom|end" />-->
 
-</Li>
+</android.support.design.widget.CoordinatorLayout>
