--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -5,11 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.weina.bishe.ScrollingActivity"
+    tools:context=".controller.ScrollingActivity"
     tools:showIn="@layout/activity_scrolling">
-
-    <com.jcodecraeer.xrecyclerview.XRecyclerView
-        android:id="@+id/recyclerview"
+    <TextView
+        android:text="@string/large_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
