--- a/app/src/main/res/layout/goods_list.xml
+++ b/app/src/main/res/layout/goods_list.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.weina.bishe.ScrollingActivity">
+    tools:context=".controller.ScrollingActivity">
 
     <com.jcodecraeer.xrecyclerview.XRecyclerView
         android:id="@+id/home_recyclrview"
