--- a/app/src/main/res/layout/main_content_bar.xml
+++ b/app/src/main/res/layout/main_content_bar.xml
@@ -56,6 +56,7 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content" />
             <ImageButton
+                android:id="@+id/home_me_button"
                 android:background="@drawable/me_button"
                 android:layout_width="51dp"
                 android:scaleType="centerCrop"
