--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorPrimaryDarkFull">#779f9f9f</color>
     <color name="colorPrimary">#ffa414</color>
     <color name="colorPrimaryDark">#ffa414</color>
     <color name="colorAccent">#FF4081</color>
