--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <LinearLayout
         android:id="@+id/login_button"
         android:layout_width="match_parent"
@@ -9,36 +11,83 @@
         android:orientation="horizontal"
         android:layout_alignParentBottom="true">
         <Button
-            android:text="cart"
+            android:id="@+id/login_button_cancle"
+            android:text="cancle"
             android:textSize="15sp"
+            android:textColor="@color/whites"
             android:background="#ffb52b"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_weight="1"/>
         <Button
-            android:text="buy"
+            android:id="@+id/login_button_confirm"
+            android:text="confirm"
             android:textSize="15sp"
+            android:textColor="@color/whites"
             android:background="#ff171f"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_weight="1"/>
         >
     </LinearLayout>
-
     <LinearLayout
         android:id="@+id/login_text"
         android:layout_above="@id/login_button"
-        android:fitsSystemWindows="true"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:orientation="vertical"
         >
         <TextView
-            android:text="your name"
-            android:textColor="#030303"
-            android:textSize="20sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <!-- 填写框 账号-->
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                style="@style/inputTextStyle"
+                android:text="  sign   in   :"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <EditText
+                android:id="@+id/login_text_username"
+                style="@style/inputBoxStyle"
+                android:layout_width="0dp"
+                android:digits="1234567890qwertyuiopasdfghjklzxcvbnm"
+                android:hint="@string/login"
+                android:layout_weight="1"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+        <!-- 填写框 密码-->
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                style="@style/inputTextStyle"
+                android:text="password :"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <EditText
+                android:id="@+id/login_text_password"
+                style="@style/inputBoxStyle"
+                android:hint="@string/password"
+                android:inputType="textVisiblePassword"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+        <TextView
+            android:id="@+id/login_text_message"
+            android:text="please sign in !"
+            android:padding="10dp"
+            android:gravity="center|top"
+            android:textColor="@color/red"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
     </LinearLayout>
 
 </RelativeLayout>
