--- a/app/src/main/res/layout/mian_content_head.xml
+++ b/app/src/main/res/layout/mian_content_head.xml
@@ -3,6 +3,7 @@
 
     android:layout_width="match_parent" android:layout_height="wrap_content">
    <ImageButton
+       android:id="@+id/home_search_button"
        android:background="@drawable/search"
        android:layout_width="match_parent"
        android:scaleType="centerCrop"
