--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <!--滑动偏移-->
     <dimen name="slidingmenu_offset">120dp</dimen>
+
+    <dimen name="btn_height">40dp</dimen>
+    <dimen name="btn_width">50dp</dimen>
 </resources>
