--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -38,7 +38,7 @@
             android:id="@+id/item_price"
             android:text="￥ 300"
             android:textSize="18sp"
-            android:textColor="#ff690a"
+            android:textColor="@color/goodPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
@@ -49,7 +49,7 @@
             android:id="@+id/item_sales"
             android:text="11 人付款"
             android:textSize="14sp"
-            android:textColor="#7b7775"
+            android:textColor="@color/goodTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
