--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,4 +43,11 @@
         <item name="android:textSize">15sp</item>
         <item name="android:textColor">@color/loginText</item>
     </style>
+
+    <style name="menuText">
+        <item name="android:textColor">#2b2b2b</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">10dp</item>
+    </style>
 </resources>
