--- a/app/src/main/res/layout/goods_detail.xml
+++ b/app/src/main/res/layout/goods_detail.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    tools:context=".controller.GoodDetailActivity"
-    android:layout_height="match_parent"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:fresco="http://schemas.android.com/tools"
+                tools:context=".controller.GoodDetailActivity"
+                android:layout_height="match_parent"
     >
 
     <LinearLayout
@@ -13,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Button
+            android:id="@+id/good_detail_bt_cart"
             android:text="cart"
             android:textSize="15sp"
             android:background="#ffb52b"
@@ -20,6 +23,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"/>
         <Button
+            android:id="@+id/good_detail_bt_buy"
             android:text="buy"
             android:textSize="15sp"
             android:background="#ff171f"
@@ -33,14 +37,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <ImageView
-            android:id="@+id/good_detail_img"
+
+        <com.facebook.drawee.view.SimpleDraweeView
             android:layout_width="match_parent"
             android:layout_height="240dp"
+            android:id="@+id/good_detail_img"
             android:layout_weight="1"
-            android:src="@drawable/login_wait"
-            android:scaleType="centerCrop"
-            android:paddingBottom="1dp" />
+            app:placeholderImage="@drawable/login_wait"
+            fresco:placeholderImage="@drawable/login_wait"
+            fresco:placeholderImageScaleType="fitXY"  />
         <TextView
             android:id="@+id/good_detail_title"
             android:layout_width="match_parent"
@@ -81,9 +86,60 @@
 
     <!--标题 灰色-->
     <TextView
+        android:id="@+id/good_detail_title_color"
         android:layout_alignParentTop="true"
         android:background="#602b2a2a"
         android:layout_width="match_parent"
         android:layout_height="25dp"/>
+    <TextView
+        android:id="@+id/good_detail_bg"
+        android:visibility="gone"
+        android:background="#602b2a2a"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+    <LinearLayout
+        android:id="@+id/good_detail_confirm"
+        android:visibility="gone"
+        android:layout_below="@id/good_detail_title_color"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <RelativeLayout
+            android:background="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="300dp">
+            <ImageView
+                android:id="@+id/good_detail_inner_img"
+                android:src="@drawable/pay"
+                android:layout_margin="10dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_width="140dp"
+                android:layout_height="140dp"/>
+            <TextView
+                android:layout_margin="10dp"
+                android:id="@+id/good_detail_inner_title"
+                android:layout_toRightOf="@id/good_detail_inner_img"
+                android:text=" 麦旋风"
+                android:textStyle="bold"
+                android:textColor="#1d1d1d"
+                android:maxLines="2"
+                android:ellipsize="end"
+                android:padding="5dp"
+                android:textSize="22sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </RelativeLayout>
+        <Button
+            android:text="confirm"
+            android:textSize="15sp"
+            android:background="#ff171f"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"/>
+    </LinearLayout>
 
 </RelativeLayout>
