--- a/app/src/main/res/layout/goods_detail.xml
+++ b/app/src/main/res/layout/goods_detail.xml
@@ -97,6 +97,7 @@
         android:background="#602b2a2a"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+    <!--下拉框-->
     <LinearLayout
         android:id="@+id/good_detail_confirm"
         android:visibility="gone"
@@ -124,6 +125,7 @@
                 android:layout_margin="10dp"
                 android:id="@+id/good_detail_inner_title"
                 android:layout_toRightOf="@id/good_detail_inner_img"
+                android:layout_alignParentTop="true"
                 android:text=" 麦旋风"
                 android:textStyle="bold"
                 android:textColor="#1d1d1d"
@@ -133,8 +135,19 @@
                 android:textSize="22sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
+
+            <com.example.weina.bishe.util.view.ChooseNumberView
+                android:id="@+id/good_detail_inner_choose"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/good_detail_inner_img"
+                android:layout_alignLeft="@+id/good_detail_inner_img"
+                android:layout_alignStart="@+id/good_detail_inner_img">
+
+            </com.example.weina.bishe.util.view.ChooseNumberView>
         </RelativeLayout>
         <Button
+            android:id="@+id/good_detail_btn_confirm"
             android:text="confirm"
             android:textSize="15sp"
             android:background="#ff171f"
