--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
     <com.jcodecraeer.xrecyclerview.XRecyclerView
         android:id="@+id/search_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
     </com.jcodecraeer.xrecyclerview.XRecyclerView>
 </LinearLayout>
