--- a/app/src/main/res/layout/main_fragment2.xml
+++ b/app/src/main/res/layout/main_fragment2.xml
@@ -1,47 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:background="#d5f1f0f0"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-    <com.jcodecraeer.xrecyclerview.XRecyclerView
-        android:id="@+id/order_recycle"
-        android:layout_above="@id/main_buttom"
-        android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:layout_height="0dp">
-    </com.jcodecraeer.xrecyclerview.XRecyclerView>
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <Button
-            android:id="@+id/order_buttom_btn_chooseAll"
-            android:background="@drawable/choose_button"
-            android:gravity="center"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_width="25dp"
-            android:layout_height="25dp"/>
-        <TextView
-            android:id="@+id/order_buttom_text_text"
-            android:text="总价: ￥ 200"
-            android:gravity="right"
-            android:layout_marginRight="5dp"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:orientation="vertical"
+                  android:background="#d5f1f0f0"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent">
+        <com.jcodecraeer.xrecyclerview.XRecyclerView
+            android:id="@+id/order_recycle"
+            android:layout_above="@id/main_buttom"
+            android:layout_width="match_parent"
             android:layout_weight="1"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:textColor="@color/goodPrice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <Button
-            android:id="@+id/order_buttom_btn_submit"
-            android:text=" 提交订单 "
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:background="#ffab19"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="0dp">
+        </com.jcodecraeer.xrecyclerview.XRecyclerView>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <Button
+                android:id="@+id/order_buttom_btn_chooseAll"
+                android:background="@drawable/choose_button"
+                android:gravity="center"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"/>
+            <TextView
+                android:id="@+id/order_buttom_text_text"
+                android:text="总价: ￥ 200"
+                android:gravity="right"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="@color/goodPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <Button
+                android:id="@+id/order_buttom_btn_submit"
+                android:text=" 提交订单 "
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:background="#ffab19"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+    <RelativeLayout
+        android:id="@+id/nothing_layout"
+        android:background="#f1f0f0"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/nothing_bg"
+            android:src="@drawable/nothing_cart"
+            android:scaleType="centerInside"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:text=" 你的购物车空空如也 "
+            android:textColor="@color/colorPrimaryDark"
+            android:gravity="center"
+            android:textSize="18sp"
+            android:layout_below="@id/nothing_bg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </RelativeLayout>
+</RelativeLayout>
