--- a/app/src/main/res/layout/address_addnew_view.xml
+++ b/app/src/main/res/layout/address_addnew_view.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools">
     <LinearLayout
-        android:id="@+id/login_button"
+        android:id="@+id/address_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_alignParentBottom="true">
         <Button
-            android:id="@+id/login_button_cancle"
+            android:id="@+id/dialog_address_button_cancle"
             android:text="cancle"
             android:textSize="15sp"
             android:textColor="@color/whites"
@@ -20,7 +20,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"/>
         <Button
-            android:id="@+id/login_button_confirm"
+            android:id="@+id/dialog_address_button_confirm"
             android:text="confirm"
             android:textSize="15sp"
             android:textColor="@color/whites"
@@ -32,7 +32,7 @@
     </LinearLayout>
     <LinearLayout
         android:id="@+id/login_text"
-        android:layout_above="@id/login_button"
+        android:layout_above="@id/address_button"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:orientation="vertical"
@@ -48,40 +48,55 @@
             android:layout_height="wrap_content">
             <TextView
                 style="@style/inputTextStyle"
-                android:text="  sign   in   :"
+                android:text=" 收货地址  :"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <EditText
-                android:id="@+id/login_text_username"
+                android:id="@+id/dialog_address_address"
                 style="@style/inputBoxStyle"
                 android:layout_width="0dp"
-                android:digits="1234567890qwertyuiopasdfghjklzxcvbnm"
-                android:hint="@string/login"
                 android:layout_weight="1"
                 android:layout_height="wrap_content" />
         </LinearLayout>
-        <!-- 填写框 密码-->
+        <!-- 填写框 手机-->
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
                 style="@style/inputTextStyle"
-                android:text="password :"
+                android:text=" 收货手机 :"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <EditText
-                android:id="@+id/login_text_password"
+                android:id="@+id/dialog_address_phone"
                 style="@style/inputBoxStyle"
-                android:hint="@string/password"
-                android:inputType="textPassword"
+                android:digits="1234567890-"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content" />
         </LinearLayout>
+        <!-- 填写框 收款人-->
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                style="@style/inputTextStyle"
+                android:text=" 收 件 人   :"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <EditText
+                android:id="@+id/dialog_address_reciver"
+                style="@style/inputBoxStyle"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+        <!--提示信息-->
         <TextView
-            android:id="@+id/login_text_message"
-            android:text="please sign in !"
+            android:id="@+id/dialog_address_message"
+            android:text=""
             android:padding="10dp"
             android:gravity="center|top"
             android:textColor="@color/red"
