--- a/app/src/main/res/layout/goods_detail.xml
+++ b/app/src/main/res/layout/goods_detail.xml
@@ -73,14 +73,25 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"/>
-            <TextView
-                android:id="@+id/good_sales"
-                android:text="300 人付款"
-                android:textColor="@color/goodTitle"
-                android:layout_margin="15dp"
-                android:gravity="bottom"
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent">
+                <TextView
+                    android:id="@+id/good_sales"
+                    android:text="300 人付款"
+                    android:textColor="@color/goodTitle"
+                    android:layout_margin="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:id="@+id/good_goodsales"
+                    android:text="300 件卖出"
+                    android:layout_margin="5dp"
+                    android:textColor="@color/goodTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
