--- a/app/src/main/res/layout/main_fragment3.xml
+++ b/app/src/main/res/layout/main_fragment3.xml
@@ -1,7 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_weight="1"
+            android:background="@drawable/person_bg"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginBottom="2px">
+            <TextView
+                android:id="@+id/person_balanceName"
+                android:text="余额: ￥"
+                android:textSize="40sp"
+                android:padding="10dp"
+                android:textColor="@color/white"
+                android:layout_centerInParent="true"
+                android:layout_alignParentLeft="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/person_balance"
+                android:text="100"
+                android:textSize="50sp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/person_balanceName"
+                android:layout_toRightOf="@+id/person_balanceName"
+                android:layout_toEndOf="@+id/person_balanceName"/>
+        </RelativeLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2px">
+            <TextView
+                android:id="@+id/person_address_text"
+                android:text="地址管理"
+                android:background="@color/white"
+                style="@style/menuText"
+                android:drawablePadding="10dp"
+                android:drawableLeft="@drawable/menu_address"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/person_order_text"
+                android:text="订单管理"
+                android:layout_marginLeft="1px"
+                style="@style/menuText"
+                android:background="@color/white"
+                android:drawablePadding="10dp"
+                android:drawableLeft="@drawable/menu_order"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
 
-</LinearLayout>
+
+        <ScrollView
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="0dp">
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <TextView
+                    style="@style/personMenu"
+                    android:text="修改支付密码"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"/>
+                <TextView
+                    style="@style/personMenu"
+                    android:text="修改登录密码"
+                    android:layout_marginBottom="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"/>
+            </LinearLayout>
+        </ScrollView>
+    </LinearLayout>
